responsividade de menu

--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,36 @@ img {
 }
 
 /* Menu */
-
 .menu {
 	background: #252525;
+	padding: 15px 0;
+}
+
+.menu-nav ul {
+	float: right;
+}
+.menu-nav ul li {
+	display: inline-block;
 }
 
 .menu-nav a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 1.125em;
+	display: block;
+	padding: 10px;
+	margin-left: 10px;
+}
+
+@media (max-width: 739px) {
+	.menu-nav ul {
+		float: none;
+	}
+	.menu-nav ul li a {
+		margin-left: 0px;
+		padding-left: 0px;
+		padding-right: 8px;
+	}
 }
 
 /* Intro */
@@ -37,6 +58,8 @@ img {
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+	text-align: center;
+	padding: 150px 0;
 }
 
 .intro h1 {
@@ -50,11 +73,21 @@ img {
 	width: 20px;
 	height: 4px;
 	background: #fff;
+	margin: 10px auto;
 }
 
 .intro p {
 	font-style: italic;
 	font-size: 1.125em;
+}
+
+@media (max-width: 739px) {
+	.intro {
+		padding: 60px 0;
+	}
+	.intro h1 {
+		font-size: 2.5em;
+	}
 }
 
 /* Sobre */
